Distorted verified view bug fixed

--- a/src/components/certificateViewer.scss
+++ b/src/components/certificateViewer.scss
@@ -106,4 +106,7 @@ li.tab {
     padding-right: 15px !important;
     padding-left: 15px !important;
   }
+  svg {
+    padding: 0 !important;
+  }
 }
